RF testTeamNames(), added method to TeamPage, added testTeamLinks() to TeamTest, NataliiaOliverTest deleted